# goit-pythonweb-hw-12

./: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task_1.py
alembic/: env.py
alembic/versions/: 358df12bbb9f_add_refreshtoken_model.py  74c096c34e17_add_user_model.py  7964d033cfbe_add_timezone_to_expires_at.py  a48366918190_add_last_password_reset_to_users.py  c77bb3a392f3_add_role_to_user.py  c7fa2b72de9a_add_expires_at_to_refreshtoken.py  ec9b8b3549bb_add_is_verified_field.py
app/: auth.py  auth_ui_routes.py  cloudinary_service.py  crud.py  database.py  dependencies.py  email.py  email_utils.py  init_db.py  main.py  models.py  redis_cache.py  schemas.py  security.py  test_email.py
docs/source/: conf.py  index.rst  modules.rst
templates/: change_role_form.html  dashboard.html  login_form.html  register_form.html  reset_password_form.html
tests/: conftest.py
tests/integration/: test_auth_routes.py  test_main_routes.py  test_redis_cache.py
tests/unit/: test_auth.py  test_cloudinary_service.py  test_crud.py  test_email.py
